fix background & overflow tables

--- a/style.css
+++ b/style.css
@@ -7,6 +7,7 @@ body {
   scroll-behavior: smooth;
 
   background-image: linear-gradient(to bottom, #ffffff, lightgray);
+  background-repeat: no-repeat;
 }
 /* Reset */
 
@@ -95,6 +96,7 @@ img {
   position: relative;
   top: 0;
   left: 0;
+
 
   z-index: -2;
 }
@@ -1555,6 +1557,8 @@ img {
 
   width: 100%;
   height: 100%;
+
+  overflow: scroll;
 
   background: rgba(0, 0, 0, 0.2);
 
